--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Chong Hua Hospital - Doctors Portal</title>
+  <title>Chong Hua Hospital - Doctors' Portal</title>
 
   <base href="/"/>
 
