--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,9 @@
   <meta name="theme-color" content="#1976d2">
 
   <!-- Lottie Player -->
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-</head>
+  <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
+  <script src="./assets/lottie.js"></script>
+</head> 
 
 <body>
   <app-root></app-root>
