Index cleanup and update meta for iOS to use black-translucent.

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,10 @@
   <!-- add to homescreen for ios -->
   <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png">
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#275228">
 
-  <!-- Lottie Player -->
-  <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script> -->
   <script src="./assets/lottie.js"></script>
 </head> 
 
