Add meta tags for social share.

--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Chong Hua Hospital - Doctors' Portal</title>
 
-<head>
-  <meta charset="utf-8"/>
-  <title>Chong Hua Hospital - Doctors' Portal</title>
+    <base href="/" />
 
-  <base href="/"/>
+    <meta name="color-scheme" content="light dark" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
-  <meta name="color-scheme" content="light dark"/>
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta name="format-detection" content="telephone=no"/>
-  <meta name="msapplication-tap-highlight" content="no"/>
+    <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+    <!-- Meta tags for Social Share -->
+    <meta property="og:title" content="ITNEXT Summit 2018 PWA" />
+    <meta
+      property="og:description"
+      content="Hey Doc! Check out Chong Hua Hospital's Doctors' Portal App!"
+    />
+    <meta
+      property="og:image"
+      content="/assets/img/dpp-social-share-fb.png"
+    />
+    <meta
+      property="og:url"
+      content="https://doctorsportal.chonghua.com.ph"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- add to homescreen for ios -->
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png">
-  <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#275228">
+    <!-- Add to Homescreen for iOS -->
+    <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#275228" />
 
-  <script src="./assets/lottie.js"></script>
-</head> 
+    <script src="./assets/lottie.js"></script>
+  </head>
 
-<body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
-
+  <body>
+    <app-root></app-root>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
+  </body>
 </html>
