--- a/src/index.html
+++ b/src/index.html
@@ -17,20 +17,24 @@
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
     <!-- Meta tags for Social Share -->
-    <meta property="og:title" content="ITNEXT Summit 2018 PWA" />
+    <meta 
+      property="og:title" 
+      content="Doctors' Portal App from Chong Hua Hospital" />
     <meta
       property="og:description"
       content="Hey Doc! Check out Chong Hua Hospital's Doctors' Portal App!"
     />
     <meta
       property="og:image"
-      content="/assets/img/dpp-social-share-fb.png"
+      content="https://doctorsportal.chonghua.com.ph/assets/img/dpp-social-share-fb.png"
     />
     <meta
       property="og:url"
       content="https://doctorsportal.chonghua.com.ph"
     />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:site_name" content="Chong Hua Hospital's Doctors' Portal App">
+    <meta name="twitter:image:alt" content="Chong Hua Hospital's Doctors' Portal App">
 
     <!-- Add to Homescreen for iOS -->
     <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
