Add cosmetic changes to labels.

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
       content="https://doctorsportal.chonghua.com.ph"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:site_name" content="Chong Hua Hospital's Doctors' Portal App">
-    <meta name="twitter:image:alt" content="Chong Hua Hospital's Doctors' Portal App">
+    <meta property="og:site_name" content="Chong Hua Hospital's Doctors' Portal App" />
+    <meta name="twitter:image:alt" content="Chong Hua Hospital's Doctors' Portal App" />
 
     <!-- Add to Homescreen for iOS -->
     <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
