Update open graph related files with new DOKi branding.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Chong Hua Hospital - Doctors' Portal</title>
+    <title>DOKi App from Chong Hua Hospital</title>
 
     <base href="/" />
 
@@ -19,10 +19,10 @@
     <!-- Meta tags for Social Share -->
     <meta 
       property="og:title" 
-      content="Doctors' Portal App from Chong Hua Hospital" />
+      content="DOKi App from Chong Hua Hospital" />
     <meta
       property="og:description"
-      content="Hey Doc! Check out Chong Hua Hospital's Doctors' Portal App!"
+      content="Hey Doc! Check out Chong Hua Hospital's DOKi App!"
     />
     <meta
       property="og:image"
@@ -33,8 +33,8 @@
       content="https://doctorsportal.chonghua.com.ph"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:site_name" content="Chong Hua Hospital's Doctors' Portal App" />
-    <meta name="twitter:image:alt" content="Chong Hua Hospital's Doctors' Portal App" />
+    <meta property="og:site_name" content="Chong Hua Hospital's DOKi App" />
+    <meta name="twitter:image:alt" content="Chong Hua Hospital's DOKi App" />
 
     <!-- Add to Homescreen for iOS -->
     <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
