Update open social graph meta data.

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,11 @@
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
     <!-- Meta tags for Social Share -->
+    <!-- FACEBOOK -->
     <meta 
       property="og:title" 
       content="DOKi App from Chong Hua Hospital" />
+    <meta property="og:type" content="article">
     <meta
       property="og:description"
       content="Hey Doc! Check out Chong Hua Hospital's DOKi App!"
@@ -32,9 +34,14 @@
       property="og:url"
       content="https://doctorsportal.chonghua.com.ph"
     />
+    <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@coolnumber9"> 
     <meta property="og:site_name" content="Chong Hua Hospital's DOKi App" />
+    <meta name="twitter:title" content="DOKi App from Chong Hua Hospital"> 
     <meta name="twitter:image:alt" content="Chong Hua Hospital's DOKi App" />
+    <meta name="twitter:description" content="Hey Doc! Check out Chong Hua Hospital's DOKi App!"> 
+    <meta name="twitter:image" content="https://doctorsportal.chonghua.com.ph/assets/img/dpp-social-share-twitter.png">
 
     <!-- Add to Homescreen for iOS -->
     <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
