Update pipeline with Azure staging routes. Update index html.

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
     <!-- FACEBOOK -->
     <meta 
       property="og:title" 
-      content="DOKi App from Chong Hua Hospital" />
+      content="DOKi from Chong Hua Hospital" />
     <meta property="og:type" content="article">
     <meta
       property="og:description"
-      content="Hey Doc! Check out Chong Hua Hospital's DOKi App!"
+      content="Hey Dok! Check out Chong Hua Hospital's DOKi App!"
     />
     <meta
       property="og:image"
@@ -40,7 +40,7 @@
     <meta property="og:site_name" content="Chong Hua Hospital's DOKi App" />
     <meta name="twitter:title" content="DOKi App from Chong Hua Hospital"> 
     <meta name="twitter:image:alt" content="Chong Hua Hospital's DOKi App" />
-    <meta name="twitter:description" content="Hey Doc! Check out Chong Hua Hospital's DOKi App!"> 
+    <meta name="twitter:description" content="Hey Dok! Check out Chong Hua Hospital's DOKi App!"> 
     <meta name="twitter:image" content="https://doctorsportal.chonghua.com.ph/assets/img/dpp-social-share-twitter.png">
 
     <!-- Add to Homescreen for iOS -->
