fix notch issue v2

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
     <!-- Add to Homescreen for iOS -->
     <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
-    <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width"></meta>
+    <!-- <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width"></meta> -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
