--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     <meta name="twitter:image:alt" content="Chong Hua Hospital's DOKi App" />
     <meta name="twitter:description" content="Hey Dok! Check out Chong Hua Hospital's DOKi App!"> 
     <meta name="twitter:image" content="/assets/img/dpp-social-share-twitter.png">
-
+    <?xml version="1.0"?> <configuration> <system.webServer> <staticContent> <mimeMap fileExtension=".json" mimeType="application/json; charset=UTF-8" /> </staticContent> </system.webServer> </configuration> 
     <!-- Add to Homescreen for iOS -->
     <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
     <!-- <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width"></meta> -->
