added docker files on test master

--- a/src/index.html
+++ b/src/index.html
@@ -9,53 +9,57 @@
     <meta name="color-scheme" content="light dark" />
     <meta
       name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
     <!-- <link rel="icon" type="image/png" href="assets/icon/favicon.png" /> -->
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/icon/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/icon/favicon-16x16.png" />
 
     <!-- Meta tags for Social Share -->
     <!-- FACEBOOK -->
-    <meta 
-      property="og:title" 
-      content="DOKi from Chong Hua Hospital" />
-    <meta property="og:type" content="article">
+    <meta property="og:title" content="DOKi from Chong Hua Hospital" />
+    <meta property="og:type" content="article" />
     <meta
       property="og:description"
-      content="Hey Dok! Check out Chong Hua Hospital's DOKi App!"
-    />
-    <meta
-      property="og:image"
-      content="/assets/img/dpp-social-share-fb.png"
-    />
-    <meta
-      property="og:url"
-      content="https://doki.chonghua.com.ph"
-    />
+      content="Hey Dok! Check out Chong Hua Hospital's DOKi App!" />
+    <meta property="og:image" content="/assets/img/dpp-social-share-fb.png" />
+    <meta property="og:url" content="https://doki.chonghua.com.ph" />
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@coolnumber9"> 
+    <meta name="twitter:creator" content="@coolnumber9" />
     <meta property="og:site_name" content="Chong Hua Hospital's DOKi App" />
-    <meta name="twitter:title" content="DOKi App from Chong Hua Hospital"> 
+    <meta name="twitter:title" content="DOKi App from Chong Hua Hospital" />
     <meta name="twitter:image:alt" content="Chong Hua Hospital's DOKi App" />
-    <meta name="twitter:description" content="Hey Dok! Check out Chong Hua Hospital's DOKi App!"> 
-    <meta name="twitter:image" content="/assets/img/dpp-social-share-twitter.png">
+    <meta
+      name="twitter:description"
+      content="Hey Dok! Check out Chong Hua Hospital's DOKi App!" />
+    <meta
+      name="twitter:image"
+      content="/assets/img/dpp-social-share-twitter.png" />
 
     <!-- Add to Homescreen for iOS -->
-    <link rel="apple-touch-icon" sizes="192x192" href="/assets/icons/ios/192.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="/assets/icons/ios/192.png" />
     <!-- <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width"></meta> -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+      content="black-translucent" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#275228" />
-
+    <script src="assets/env.js"></script>
     <!-- <script src="./assets/lottie.js"></script> -->
   </head>
 
