--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       content="black-translucent" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#275228" />
-    <script src="assets/env.js"></script>
+    <!--script src="assets/env.js"></script-->
     <!-- <script src="./assets/lottie.js"></script> -->
   </head>
 
